# gcp-blogs

./: .gitignore
.claude/agents/: adk-reviewer.md  docs-reviewer.md
20251019_claude_skills_for_adk/: article.md
20251019_claude_skills_for_adk/app/: .gitignore  README.md  main.py  requirements.txt
20251028_claude_reviewer_for_adk/: article.md  article_ja.md  outline.md
20251028_claude_reviewer_for_adk/article_after_review/: custom-streaming-ws.md
20251028_claude_reviewer_for_adk/article_before_review/: webpage.htm
20251028_claude_reviewer_for_adk/reviews/: adk_review_report_custom-streaming-ws_20251028-163305.md  docs_review_report_custom-streaming-ws_20251028-162615.md
20251125_bidi_guide/: article.md  article_ja.md  article_short.md
20251203_vs20_intro/: article.html  article.md
2026-0522-tt-model/: viz_plan.md
20260114_travel_agent/: article.md
20260419_scale_agents/: index.lab.github.md
20260518_live_translator/: post.md
20260522_ge2_and_tt_model/: README.md  post.md  pyproject.toml
20260522_ge2_and_tt_model/data/umap/: retrieval_clusters.json  similarity_clusters.json  tt_retrieval_clusters.json  tt_similarity_clusters.json
20260522_ge2_and_tt_model/scripts/: run_pipeline.py
20260522_ge2_and_tt_model/src/tt_model/: app.py  cluster_labels.py  config.py  data.py  evaluate.py  pipeline.py  train.py  umap_coords.py  vs2.py
20260522_ge2_and_tt_model/src/tt_model/templates/: search.html
20260602_gemini_grounding/: intro-grounding-gemini-v2-ja.ipynb  intro-grounding-gemini-v2.ipynb
deprecated/: shop_demo.md
(+20 files in other folders)
