[project]
name = "tt-model"
version = "0.1.0"
description = "Two-tower retrieval model: learned projections on Gemini Embedding 2 with Vector Search 2.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "google-cloud-vectorsearch>=0.7.0",
    "jax[cpu]",
    "flax>=0.10",
    "optax",
    "numpy",
    "tqdm",
    "datasets",
    "requests",
    "google-auth",
    "google-cloud-storage",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tt_model"]
